# icf_detector_training

./: .gitignore  CMakeLists.txt  data_types.hpp  feature_extract.hpp  features_extractor.cpp  features_extractor.hpp  generate_proto.sh  helpers.cpp  helpers.hpp  icf_detector.proto  icf_fpdw_detector.cpp  icf_fpdw_detector.hpp  icf_multi_detector.cpp  icf_multi_detector.hpp  icf_naive_detector.cpp  icf_naive_detector.hpp  integral_images.cpp  integral_images.hpp  main.cpp  main_get_multiscale_model.cpp  main_test.cpp  main_train.cpp  readme.md  training_adaboost.cpp  training_adaboost.hpp
matlab/: Readme.md  adjust_contrast_onelayer.m  adjust_contrast_rgb.m  ball_label.txt  images2unnormalized_images.m  label2dataset_ball_neg_png.m  label2dataset_ball_pos_png.m  label2dataset_goal_neg_png.m  label2dataset_goal_pos_png.m  label2dataset_goal_pos_png_big.m  label_target_ball_png.m  label_target_goal_png.m  main_ball.m  main_goal.m  pos_denormalize.m  yuv2png.m
script/: .gitignore  Readme.txt  get_neg_train_file.sh  get_pos_train_file.sh  train.sh
